[package]
name = "api_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = { version = "0.5.1", features = ["json", "secrets"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
rocket_sync_db_pools = { version = "0.1.0-rc", features = ["diesel_postgres_pool"] }
dotenvy = "0.15"
serde = "1.0.203"
serde_json = "1.0"
chrono = "0.4.38"
base64 = "0.22.1"

[dependencies.mongodb]
version = "2.8.2"
features = ["tokio-sync"]